<resources>
    <string name="app_name">Smarthunter</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="complete_name">Complete Name</string>
    <string name="course_list">Courses List</string>
    <string name="course_image">Course Image</string>
    <string name="course_title">Course Title</string>
    <string name="lesson_list">Lessons List</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="lessonimage">lessonImage</string>
    <string name="lesson_description">Lesson Description</string>
    <string name="profile">Profile</string>
    <string name="enroll">Enroll</string>
    <string name="menu">Menu</string>
    <string name="update">Update</string>
    <string name="enrolled_courses">Enrolled Courses</string>
</resources>