<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MenuActivity">

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#F44336"
        android:onClick="buttonProfileClicked"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/buttonCourseList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenuTitle" />

    <Button
        android:id="@+id/buttonCourseList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:onClick="buttonCourseListClicked"
        android:text="@string/course_list"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnrolledCourses"
        app:layout_constraintEnd_toEndOf="@+id/buttonProfile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonProfile"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfile" />

    <Button
        android:id="@+id/buttonEnrolledCourses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="291dp"
        android:backgroundTint="#F44336"
        android:onClick="buttonEnrolledClicked"
        android:text="@string/enrolled_courses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonCourseList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonCourseList"
        app:layout_constraintTop_toBottomOf="@+id/buttonCourseList" />

    <TextView
        android:id="@+id/textViewMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/menu"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>