<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:scrollbarStyle="insideInset"
    android:verticalScrollbarPosition="right">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewLesson"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:contentDescription="@string/lessonimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLessonTitle"
            app:srcCompat="@android:drawable/presence_video_busy" />

        <TextView
            android:id="@+id/textViewLessonTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lesson_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLessonDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/lesson_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewLesson"
            app:layout_constraintTop_toBottomOf="@+id/textViewLessonTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
</LinearLayout>